--- a/server/views/layouts/main.handlebars
+++ b/server/views/layouts/main.handlebars
@@ -3,12 +3,82 @@
 <head>
     <meta charset="utf-8">
     <title>TechStore</title>
+    <link rel="shortcut icon" href="https://i.imgur.com/cOtchqm.png"><!--favicon image-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="/style.css">
 </head>
 
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg justify-content-between">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/">
+            <img src="https://i.imgur.com/cOtchqm.png" class="" alt="" style="width:60px;">
+            TechStore
+        </a>
+        <div class="navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/carrito"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                        Carrito</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/ordenes"><i class="fa fa-shopping-bag" aria-hidden="true"></i> Ordenes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/productos"><i class="fa fa-list-alt" aria-hidden="true"></i> Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/chat"><i class="fa fa-comments" aria-hidden="true"></i> Chat</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/crud/productos"><i class="fa fa-plus" aria-hidden="true"></i> Crud Productos</a>
+                </li>
+            </ul>
+            {{#if user}}
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item nav-user">
+                    <img src="{{user.fotoPerfil}}" class="rounded-circle" height="35" alt="" loading="lazy" />
+                    <p style="margin:0px">{{user.username}}</p>
+                    <a href="/auth/logout" style="color:red"><i class="fa fa-times"></i></a>
+                </li>
+            </ul>
+            {{else}}
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="btn_login" href="/auth/login">Login</a>
+                    <a class="btn_register" href="/auth/register">Register</a>
+                </li>
+            </ul>
+            {{/if}}
 
+        </div>
+    </div>
+</nav>
+<!-- Navbar -->
 <body>
-    {{{body}}}
+    <div class="main">
+        {{{body}}}  
+    </div>
+
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3">
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0  text-decoration-none lh-1 mx-2">
+                <img src="https://i.imgur.com/88ZSr3f.png" alt="" srcset="" width="40">
+            </a>
+            <span class="mb-3 mb-md-0 ">© 2023 Proyecto Final CoderHouse - Desarrollado por Charly Moreno</span>
+        </div>
+{{!-- 
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="" href="#"><i class="fa-brands fa-github"></i></a></li>
+        </ul> --}}
+    </footer>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
